# RadialDistributionFunction

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  rdf.cu  vector_algebra.h
cmake/: gitversion.sh  listArchs.sh
src/: .depend  CMakeLists.txt  Makefile  NeighbourListCPU.h  NeighbourListGPU.cuh  ParticleSorter.cuh  atomic.cuh  config.h  defines.h.in  gitversion.h.in  input.h  inputFast.h  main.cpp  main.cu  rdfCPU.h  rdfGPU.cuh  rdfGPU_kernel.cuh  rdf_common.h  superIO.h  utils.cuh  vector_algebra.cuh
test/: Makefile  checkResults.bash  random_positions.m  test.bash
